k8s_files/webhook.yaml
---

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "tw-validating-webhook"
webhooks:
  - name: "validating-webhook.twistlock.com"
    # namespaceSelector
    # matchPolicy: Equivalent # v1.15+
    # timeoutSeconds: 2 # v1.14+
    admissionReviewVersions: ["v1", "v1beta1"] # Specify what versions of AdmissionReview objects are accepted
    sideEffects: None # sideEffects must be set to None or NoneOnDryRun
    failurePolicy: Ignore # Default failurePolicy is Fail
    rules:
      - operations: ["CREATE", "UPDATE", "CONNECT"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["*/*"]
    clientConfig:
      # caBundle field should be similar to the CA bundle from the Defender DaemonSet YAML. Make sure to change it if you are using an older Defender CA.
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIVENDQWdXZ0F3SUJBZ0lSQUp2S0syemI1YXdpdWVzVHZ5dWw1VGd3RFFZSktvWklodmNOQVFFTEJRQXcKS0RFU01CQUdBMVVFQ2hNSlZIZHBjM1JzYjJOck1SSXdFQVlEVlFRREV3bFVkMmx6ZEd4dlkyc3dIaGNOTWpNdwpNakEyTWpFME1qQXdXaGNOTWpZd01qQTFNakUwTWpBd1dqQW9NUkl3RUFZRFZRUUtFd2xVZDJsemRHeHZZMnN4CkVqQVFCZ05WQkFNVENWUjNhWE4wYkc5amF6Q0NBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0MKZ2dFQkFMdk01ektxaUJNT1cvVk1XUVFvYnNRNGlSQUFaalZiSEhNUmh4QmRvSmV6c2tkU0kycWVKZ2lQcmY2Uwp1dG5hWnZOWGJ [...]
      service:
        name: defender
        namespace: "prismacloud"
        path: "/p75qerhtq4ummccslzlq5psnpgfz"
